@@ -76,6 +76,7 @@ FetchBlueprintPage.cpp \
 sha1Encryption.cpp \
 EyedropperStatusDisplay.cpp \
 secureString.cpp \
+sharedServerSecret.cpp \
 
 
 
