@@ -80,6 +80,7 @@ FetchBlueprintPage.cpp \
 sha1Encryption.cpp \
 EyedropperStatusDisplay.cpp \
 secureString.cpp \
+sharedServerSecret.cpp \
 
 
 
