@@ -1,0 +1,18 @@
+
+// you can replace this string before building the client in order to
+// match the shared secret that the server is expecting.
+
+// Please don't abuse your power to do this.
+// Remember that this is an indie game made entirely by one guy and being
+// run on a shoestring budget server.  Making a truly "secure" game, where
+// every move happens on the server, would exceed the resources that I had
+// available.
+
+// If any mod that you're building might give you a questionable advantage,
+// please don't connect to the main server with that mod.
+
+
+
+const char *sharedServerSecret = "This is an example secret.  You probably cannot connect to the main server without replacing this.";
+
+
