@@ -5,5 +5,5 @@ necessary.
 
 
 Jason Rohrer
-Davis, CA
+Davis, California
 March 2013
